[package]
name = "mach_thing"
version = "0.1.0"
authors = ["nathanwhit <nathan.whitaker01@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.16.1"
libc = "0.2.66"
mach = "0.3.2"

[build-dependencies]
cc = "1.0.50"
